Hide slave cropper label on hover (fixes #89)

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ img {
   max-width: 100%;
 }
 
+.croppers > .img-container:hover h2 {
+  display: none;
+}
+
 .cropper-modal {
   opacity: var(--opacity-modal-overlay);
 }
